--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 colorama==0.4.3
+cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
 docutils==0.15.2
@@ -29,7 +30,9 @@ jmespath==0.9.4
 jsonschema==3.2.0
 jupyter-client==5.3.4
 jupyter-core==4.6.1
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
+matplotlib==3.1.3
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.4
@@ -46,6 +49,7 @@ prompt-toolkit==3.0.3
 protobuf==3.11.3
 pydeck==0.2.1
 Pygments==2.5.2
+pyparsing==2.4.6
 pyrsistent==0.15.7
 python-dateutil==2.8.0
 pytz==2019.3
