--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 mistune==0.8.4
+mpmath==1.1.0
 nbconvert==5.6.1
 nbformat==5.0.4
 notebook==6.0.3
@@ -61,6 +62,7 @@ scipy==1.4.1
 Send2Trash==1.5.0
 six==1.14.0
 streamlit==0.55.0
+sympy==1.5.1
 terminado==0.8.3
 testpath==0.4.4
 toml==0.10.0
